# IndoorKingphoenix

./: .gitignore  README.md  autoV2.py  autoV3.py  autoV4.py  config.json  config.py  drone.py  main.py  pyproject.toml  requirements.txt  t265.py  vision.py
king_phoenix/: __init__.py  config.py  drone.py  front_vision.py  gcs.py  mission.py  navigator.py  t265.py  vision.py
old/: Tmission.py  autoDay1Final.py  autoV4.py  cameraChecker.py  config.json  gate.py  gateTest.py  hsvTuner.py  local.py  mission2.py  multiMission.py  rotate.py  yaw_test.py
templates/: index.html
tools/: __init__.py  camera_checker.py  hsv_tuner.py
