[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "king-phoenix"
version = "2.0.0"
description = "Autonomous indoor drone navigation for FIRA competition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["drone", "mavlink", "fira", "opencv", "autonomous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
t265 = ["pyrealsense2>=2.54", "transformations>=2023.1"]

[tool.setuptools.packages.find]
include = ["king_phoenix*"]
